--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,8 @@ projectVersion=0.0.1
 springBootVersion=3.0.6
 springDependencyManagementVersion=1.1.0
 
+# Kotlin
 kotlinVersion=1.8.20
+kotestVersion=5.5.5
+kotestSpringVersion=1.1.2
+mockkVersion=1.13.5
