feat(GraphQL): Member GraphQL 디렉토리 구조 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,5 +18,7 @@ spring:
     graphiql:
       enabled: true
     schema:
+      locations: classpath:graphql/**/
+      file-extensions: .graphqls, .gqls
       printer:
         enable: true
