chore(GraphQL): Resolver 이름 및 간단한 설정 변경

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,6 +19,6 @@ spring:
       enabled: true
     schema:
       locations: classpath:graphql/**/
-      file-extensions: .graphqls, .gqls
+      file-extensions: .graphqls, .graphql
       printer:
-        enable: true
+        enabled: true
