--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,11 +2,10 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
+    username: sa
   h2:
     console:
       enabled: true
-      settings:
-        web-allow-others: true
       path: /h2-console
   jpa:
     hibernate:
